--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,3 +1,9 @@
+@import './variables/main.scss';
+
+header {
+  background-color: $accent-dark;
+}
+
 nav {
   width: 100%;
   display: flex;
@@ -5,6 +11,7 @@ nav {
   align-items: center;
   flex-wrap: wrap;
   font-family: 'Lato', sans-serif;
+  color: $white;
 }
 
 .nav-items {
