created template for robots and card template

--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -9,7 +9,7 @@ footer {
   align-items: center;
   margin-top: 100px;
   padding-top: 15px;
-  position: relative;
+  // position: fixed;
   width: 100%;
   bottom: 0;
 }
