--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -29,3 +29,24 @@ main {
   flex-direction: column;
   flex-wrap: wrap;
 }
+
+.robots-flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-container {
+  border: 1px solid $neutral-white;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 30px;
+}
+
+.card-img-container {
+  background-color: $neutral-white;
+}
