--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -8,8 +8,9 @@ footer {
   justify-content: center;
   align-items: center;
   margin-top: 100px;
-  padding-top: 15px;
+  // padding-top: 15px;
   // position: fixed;
   width: 100%;
+  height: 152px;
   bottom: 0;
 }
