--- a/src/styles/variables/main.scss
+++ b/src/styles/variables/main.scss
@@ -4,8 +4,9 @@ $white: #ffffff;
 $default: #a1a1a1;
 $neutral-white: #f3f3f3;
 $green: #4abda0;
-$blue: #69d6bb;
+$light-green: #69d6bb;
 $red: #da1414;
 $grey: rgba(19, 19, 19, 0.4);
+$dark-grey: rgba(255, 255, 255, 0.4);
 $lato-font: 'Lato', sans-serif;
 $lora-font: 'Lora', sans-serif;
