--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -13,4 +13,20 @@ footer {
   width: 100%;
   // height: 152px;
   bottom: 0;
+
+  p {
+    margin: 24px auto;
+    font-weight: 700;
+    font-size: 14px;
+    font-family: $lato-font;
+    color: $dark-grey;
+  }
+}
+
+.logo-container-footer {
+  max-width: 110px;
+  margin-top: 24px;
+  img {
+    width: 100%;
+  }
 }
