--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -24,7 +24,7 @@ main {
 .sidebar-container {
   max-width: 256px;
   margin-left: 30px;
-  border: 1px solid #f3f3f3;
+  border: 1px solid $neutral-white;
   border-radius: 8px;
 }
 
@@ -82,6 +82,22 @@ main {
 
 .skill-container {
   margin-top: 8px;
+  display: flex;
+  align-items: center;
+  input[type='checkbox'] {
+    appearance: none;
+    background-color: #fff;
+    width: 18px;
+    height: 18px;
+    border: 0.15em solid $black;
+    border-radius: 0.15em;
+  }
+
+  label {
+    font-weight: 400;
+    font-size: 16px;
+    font-family: $lato-font;
+  }
 }
 
 .clear-all-btn-cont {
@@ -89,7 +105,7 @@ main {
   justify-content: center;
   margin-top: 24px;
   button {
-    color: $blue;
+    color: $light-green;
     border: none;
     background-color: transparent;
     font-family: $lato-font;
@@ -129,7 +145,7 @@ main {
   button {
     font-family: $lato-font;
     color: $white;
-    background-color: $blue;
+    background-color: $light-green;
     border: none;
     width: 102px;
     height: 32px;
