added styling to 'no results'

--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -19,7 +19,7 @@ footer {
     font-weight: 700;
     font-size: 14px;
     font-family: $lato-font;
-    color: $dark-grey;
+    color: $light-grey;
   }
 }
 
