--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -2,14 +2,14 @@
 
 main {
   padding: 0 160px;
+  padding-top: 100px;
 }
 
 .inner-container-main {
   display: flex;
   // flex-wrap: wrap;
-  align-items: flex-start;
-  justify-content: space-evenly;
-  padding-top: 100px;
+  // align-items: flex-start;
+  // justify-content: space-evenly;
   width: 100%;
 }
 
@@ -49,7 +49,7 @@ main {
     border: none;
 
     &:hover {
-      cursor:pointer;
+      cursor: pointer;
     }
   }
 }
@@ -74,7 +74,7 @@ main {
     padding-left: 24px;
     padding-top: 12px;
     padding-bottom: 12px;
-    background-color: $neutral-white;
+    background-color: $input-bg;
     margin-top: 8px;
     outline: none;
   }
@@ -96,19 +96,39 @@ main {
   margin-top: 8px;
   display: flex;
   align-items: center;
-  // input[type='checkbox'] {
-  //   appearance: none;
-  //   background-color: #fff;
-  //   width: 18px;
-  //   height: 18px;
-  //   border: 0.15em solid $black;
-  //   border-radius: 0.15em;
-  // }
-
   label {
     font-weight: 400;
     font-size: 16px;
     font-family: $lato-font;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  input {
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
+.show-all-container button {
+  display: flex;
+  align-items: center;
+  background: transparent;
+  justify-content: start;
+  border: none;
+  margin-top: 8px;
+  padding: 0;
+  color: $default;
+  font-family: $lato-font;
+  font-weight: 500;
+  font-size: 14px;
+  img {
+    margin-right: 16px;
+  }
+
+  &:hover {
+    cursor: pointer;
   }
 }
 
@@ -123,20 +143,67 @@ main {
     font-family: $lato-font;
     font-weight: 600;
     font-size: 14px;
-
+    transition: 0.4s;
     &:hover {
-      cursor:pointer;
+      cursor: pointer;
+      color: $green;
     }
   }
 }
 
 .robots-flex-container {
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
+  flex-wrap: nowrap;
+  // flex-direction:;
+  // align-items: center;
+  // justify-content: center;
+  width: 864px;
+
+  @media screen and (max-width: 1200px) {
+    flex-wrap: wrap;
+  }
+}
+
+.robots-container {
+  width: 864px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
   align-items: center;
-  justify-content: center;
-  // max-width: 900px;
+
+  img {
+    margin-top: 32px;
+    width: 32px;
+    height: 32px;
+  }
+  h3 {
+    margin-top: 36px;
+    font-weight: 700;
+    font-size: 33px;
+    font-family: $lora-font;
+  }
+  p {
+    margin-top: 16px;
+    font-weight: 400;
+    font-size: 16px;
+    font-family: $lato-font;
+  }
+  button {
+    margin-top: 32px;
+    border: 2px solid $default;
+    border-radius: 99px;
+    color: $default;
+    background: transparent;
+    height: 48px;
+    width: 149px;
+    font-weight: 500;
+    font-size: 16px;
+    font-family: $lato-font;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
 
 .card-container {
@@ -191,5 +258,29 @@ main {
   img {
     height: 100%;
     width: 100%;
+  }
+}
+
+.load-more-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  button {
+    border: 2px solid $default;
+    color: $default;
+    border-radius: 99px;
+    height: 48px;
+    background: transparent;
+    width: 100%;
+    font-weight: 600;
+    font-size: 16px;
+    font-family: $lato-font;
+    transition: 0.4s;
+    &:hover {
+      cursor: pointer;
+      border: 2px solid $grey;
+      color: $grey;
+      background-color: $light-grey;
+    }
   }
 }
