--- a/src/styles/variables/main.scss
+++ b/src/styles/variables/main.scss
@@ -3,10 +3,11 @@ $black: #131313;
 $white: #ffffff;
 $default: #a1a1a1;
 $neutral-white: #f3f3f3;
+$input-bg: #fcfcfc;
 $green: #4abda0;
 $light-green: #69d6bb;
 $red: #da1414;
 $grey: rgba(19, 19, 19, 0.4);
-$dark-grey: rgba(255, 255, 255, 0.4);
+$light-grey: rgba(255, 255, 255, 0.4);
 $lato-font: 'Lato', sans-serif;
 $lora-font: 'Lora', sans-serif;
