--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -57,6 +57,9 @@ nav {
     flex-wrap: wrap;
     li {
       padding-right: 24px;
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 
