--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -8,7 +8,7 @@ main {
 .inner-container-main {
   display: flex;
   // flex-wrap: wrap;
-  // align-items: flex-start;
+  align-items: flex-start;
   // justify-content: space-evenly;
   width: 100%;
 }
@@ -129,6 +129,7 @@ main {
 
   &:hover {
     cursor: pointer;
+    color: $grey-hover;
   }
 }
 
@@ -153,7 +154,7 @@ main {
 
 .robots-flex-container {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   // flex-direction:;
   // align-items: center;
   // justify-content: center;
