--- a/src/styles/variables/main.scss
+++ b/src/styles/variables/main.scss
@@ -9,5 +9,6 @@ $light-green: #69d6bb;
 $red: #da1414;
 $grey: rgba(19, 19, 19, 0.4);
 $light-grey: rgba(255, 255, 255, 0.4);
+$grey-hover: #5a5a5a;
 $lato-font: 'Lato', sans-serif;
 $lora-font: 'Lora', sans-serif;
