--- a/src/styles/variables/main.scss
+++ b/src/styles/variables/main.scss
@@ -6,8 +6,10 @@ $neutral-white: #f3f3f3;
 $input-bg: #fcfcfc;
 $green: #4abda0;
 $light-green: #69d6bb;
+$forest-green: #287d3c;
 $red: #da1414;
 $grey: rgba(19, 19, 19, 0.4);
+$top-border-modal: #e7e7e7;
 $light-grey: rgba(255, 255, 255, 0.4);
 $grey-hover: #5a5a5a;
 $lato-font: 'Lato', sans-serif;
