--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -94,6 +94,7 @@ main {
     font-size: 23px;
     font-family: $lora-font;
     margin-top: 8px;
+    flex-grow: 1;
   }
   button {
     font-family: $lato-font;
@@ -118,6 +119,7 @@ main {
 
 .rating-container {
   margin-top: 24px;
+  flex-grow: 1;
   img {
     margin-left: 5px;
   }
