--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -3,6 +3,11 @@
 main {
   padding: 0 160px;
   padding-top: 100px;
+
+  @media screen and (max-width: 1200px) {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
 }
 
 .inner-container-main {
@@ -11,6 +16,9 @@ main {
   align-items: flex-start;
   // justify-content: space-evenly;
   width: 100%;
+  @media screen and (max-width: 1200px) {
+    flex-wrap: wrap;
+  }
 }
 
 .robots-container {
@@ -31,6 +39,8 @@ main {
 
   @media screen and (max-width: 1200px) {
     flex-wrap: wrap;
+    width: auto;
+    justify-content: center;
   }
 }
 
@@ -82,12 +92,14 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: 30px;
+  margin-right: 15px;
+  margin-left: 15px;
   margin-bottom: 30px;
   width: 256px;
   transition: 0.4s;
   &:hover {
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.11);
+    cursor: pointer;
   }
   h5 {
     font-weight: 700;
@@ -111,8 +123,8 @@ main {
     transition: 0.3s;
 
     &:hover {
-      cursor: pointer;
       background-color: $green;
+      cursor: pointer;
     }
   }
 }
