--- a/src/styles/Sidebar.scss
+++ b/src/styles/Sidebar.scss
@@ -5,15 +5,39 @@
   border: 1px solid $neutral-white;
   border-radius: 8px;
   @media screen and (max-width: 1200px) {
-    position: relative;
+    max-width: 256px;
+    margin-left: 15px;
+    border: 1px solid $neutral-white;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    background-color: $white;
+  }
+}
+
+.sidebar-mobile-btn {
+  display: none;
+  @media screen and (max-width: 1200px) {
+    background-color: white;
+    border-radius: 4px;
+    border: 1px solid $grey;
+    font-family: $lato-font;
+    padding: 5px 10px;
+    display: inline-block;
+    position: fixed;
+    bottom: 15px;
+    right: 30px;
+    z-index: 1;
+    transition: 0.4s;
+    &:hover {
+      cursor: pointer;
+      background-color: $neutral-white;
+    }
   }
 }
 
 .inner-sidebar-container {
   margin: 24px;
-  // display: flex;
-  // flex-direction: column;
-  // flex-wrap: wrap;
 }
 
 .flex-clear {
@@ -59,6 +83,10 @@
     background-color: $input-bg;
     margin-top: 8px;
     outline: none;
+    transition: 0.4s;
+    &:hover {
+      border: 1px solid rgba(19, 19, 19, 0.5);
+    }
   }
 }
 
@@ -99,6 +127,7 @@
     margin-right: 8px;
     width: 20px;
     height: auto;
+    transition: 0.3s;
     &:hover {
       cursor: pointer;
       opacity: 0.5;
@@ -118,6 +147,7 @@
   font-family: $lato-font;
   font-weight: 500;
   font-size: 14px;
+  transition: 0.4s;
   img {
     margin-right: 16px;
   }
