--- a/src/styles/Sidebar.scss
+++ b/src/styles/Sidebar.scss
@@ -18,11 +18,12 @@
 .sidebar-mobile-btn {
   display: none;
   @media screen and (max-width: 1200px) {
-    background-color: white;
-    border-radius: 4px;
+    background-color: $neutral-white;
+    color: $black;
+    border-radius: 44px;
     border: 1px solid $grey;
     font-family: $lato-font;
-    padding: 5px 10px;
+    padding: 12px 17px;
     display: inline-block;
     position: fixed;
     bottom: 15px;
@@ -31,7 +32,8 @@
     transition: 0.4s;
     &:hover {
       cursor: pointer;
-      background-color: $neutral-white;
+      background-color: $black;
+      color: $neutral-white;
     }
   }
 }
